--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
-    "name": "pviojo/oauth2-keycloak",
+    "name": "senyahnoj/oauth2-keycloak",
     "description": "Keycloak OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
     "license": "MIT",
     "authors": [
         {
-            "name": "Pablo Viojo",
-            "email": "pviojo@gmail.com",
-            "homepage": "https://github.com/pviojo"
+            "name": "Jon Haynes",
+            "homepage": "https://github.com/senyahnoj"
         }
     ],
     "keywords": [
@@ -19,8 +18,7 @@
         "keycloak"
     ],
     "require": {
-        "league/oauth2-client": "^2.0",
-        "firebase/php-jwt": "^4.0"
+        "league/oauth2-client": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
